--- a/jsPracticeLab.html
+++ b/jsPracticeLab.html
@@ -9,11 +9,13 @@
 	// It is possible you have seen this before -- if so, that's fine, if not, that's fine, too
 
 	// Output..
-	alert("hello");
+	//alert("hello");
+	var d = new Date()
+	alert(d)
 	console.log("hello in console");
 
 	function displayInformation () {
-		document.querySelector('h1').innerHTML = "A name";
+		document.querySelector('h1').innerHTML = "Tsung-Chi Chang";
 		document.querySelector("#URL").innerHTML = document.documentURI; // URI means something like URL -- slight differences for specificity
 		document.querySelector('#items').innerHTML = document.getElementsByTagName('li').length
 		document.querySelector('#time').innerHTML = new Date();
@@ -28,14 +30,22 @@
 		document.querySelector('#cheer').innerHTML += "Go blue!<br>"
 	}
 
+	function copyFunction2(){
+		document.querySelector('#cheer').innerHTML += "0 Canada<br>"
+	}
+
 	function handleClick(){
 		alert("hello");
+	}
+
+	function handleClick2(){
+		alert("March 20, 2019");
 	}
 </script>
 <style>
 p{
 	background-color: #b3b3b3;
-	border: 3px solid #FFFFFF;
+	border: 3px solid #0000FF;
 	padding: 3%;
 	font-size: 1.1em;
 	line-height: 1.5;
@@ -62,7 +72,7 @@ p{
 	<ul>
 		<li>Kent State</li>
 		<li>University of Pittsburgh</li>
-		<li>McGill University</li>
+		<li oncopy='copyFunction2()'>McGill University</li>
 		<li>California State University Long Beach</li>
 		<li oncopy="copyFunction()">University of Michigan</li>
 	</ul>
@@ -71,6 +81,7 @@ p{
 	</div>
 
 	<button onclick=handleClick() id="wow-button">Wow</button>
+	<button onclick=handleClick2() id="new-button">Spring Equinox 2019</button>
 
 </body>
 </html>
